# Game2024

./: CMakeLists.txt  main.cpp
Include/: Bullet.h  Entity.h  Game.h  Inventory.h  Projectile.h  Random.h  ResourceHolder.h  ResourceIdentifier.h  TextDisplay.h  World.h
Include/Characters/: CharacterFactory.h  Characters.h  Enemy.h  Hero.h  MeleeEnemy.h
Include/LifeBars/: BarsFactory.h  LifeBars.h
Include/Map/: Map.h  RenderMap.h  Tile.h
Include/Menus/: Button.h  Game_menu.h  PowerupMenu.h
Include/Objects/: Coins.h  Object.h  ObjectFactory.h  Potion.h  RangedWeapon.h  StWeapon.h  Weapon.h
Include/Observer/: Observer.h  Subject.h  mObserver.h
Include/Projectiles/: Projectile.h  ProjectileFactory.h  StProjectile.h
Include/Strategy/: PatrolStrategy.h  SeekStrategy.h  Strategy.h
Include/Textures/: ResourceHolder.h  ResourceIdentifier.h
Resources/: Map.txt
Source/: Bullet.cpp  Entity.cpp  Game.cpp  Inventory.cpp  Projectile.cpp  Random.cpp  TextDisplay.cpp  World.cpp
Source/Characters/: CharacterFactory.cpp  Characters.cpp  Enemy.cpp  Hero.cpp  MeleeEnemy.cpp
Source/LifeBars/: BarsFactory.cpp  LifeBars.cpp
Source/Map/: Map.cpp  RenderMap.cpp  Tile.cpp
Source/Menus/: Button.cpp  Game_menu.cpp  PowerupMenu.cpp
Source/Objects/: Coins.cpp  Object.cpp  ObjectFactory.cpp  Potion.cpp  RangedWeapon.cpp  StWeapon.cpp  Weapon.cpp
Source/Observer/: mObserver.cpp
Source/Projectiles/: Projectile.cpp  ProjectileFactory.cpp  StProjectile.cpp
Source/Strategy/: PatrolStrategy.cpp  SeekStrategy.cpp  Strategy.cpp
Tests/: CMakeLists.txt  Collision.cpp  Movements.cpp  Movements.h  Objects.cpp  mainTest.cpp
